# ROS2_DASHBOARD

./: .env.example  .gitignore  README.md  package-lock.json  package.json
apps/control/: package.json
apps/control/src/: index.ts
apps/renderstreaming/: package.json
apps/renderstreaming/client/public/receiver/js/: main.js
apps/web/: package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/diagnostics/: route.ts
apps/web/app/simulation/: page.tsx
apps/web/app/start-simulation/: route.ts
apps/web/components/: simulation-client.tsx  start-simulation-button.tsx  status-shell.tsx
apps/web/lib/: control-api.ts
backend/: pyproject.toml
backend/backend/: cache.py  main.py  models.py  scanner.py
docs/: prd.md  runbook.md  tasks.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: action-panel.tsx  domain-input.tsx  node-graph.tsx  node-panel.tsx  service-panel.tsx  topic-panel.tsx
frontend/src/hooks/: use-ros-data.ts
frontend/src/lib/: api.ts  graph-filters.ts  types.ts
scripts/: build_unity_renderstreaming.sh  launch_unity_renderstreaming.sh  start_backend.sh  start_control.sh  start_frontend.sh  start_renderstreaming.sh  start_web.sh  status_stack.sh  stop_stack.sh
