[project]
name = "ros2-dashboard-backend"
version = "0.1.0"
description = "ROS2 Dashboard Backend - FastAPI + rclpy"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.28.0",
]
